<resources>
    <string name="app_name">Sky Scheduler</string>
    <string name="action_info">Desarrollador</string>
    <string name="action_use">Diccionario</string>
    <string name="generate">Generar Horario</string>
    <string name="gen_l26">Generar L26</string>
    <string name="gen_l25">Generar L25</string>
    <string name="gen_tours">Generar Tours</string>
    <string name="name">Nombre:</string>
    <string name="schedule">Horario:</string>
    <string name="scheduleAM">AM</string>
    <string name="schedulePM">PM</string>
    <string name="scheduleI">I</string>
    <string name="scheduleO">Otro</string>
    <string name="scheduleStart">Inicio horario:</string>
    <string name="scheduleEnd">Fin horario:</string>
    <string name="lunch">Almuerzo:</string>
    <string name="load">Carga:</string>
    <string name="scheduleStartInput">Inicio horario (Ej: 0930):</string>
    <string name="scheduleEndInput">Fin horario (Ej: 1930):</string>
    <string name="lunchInput">Hora de almuerzo (Ej: 1300):</string>
    <string name="add">Añadir Personal</string>
    <string name="save">Guardar</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="l25">L 25</string>
    <string name="l26">L 26</string>
    <string name="hour10">10:00-11:00</string>
    <string name="hour11">11:00-12:00</string>
    <string name="hour12">12:00-13:00</string>
    <string name="hour13">13:00-14:00</string>
    <string name="hour14">14:00-15:00</string>
    <string name="hour15">15:00-16:00</string>
    <string name="hour16">16:00-17:00</string>
    <string name="hour17">17:00-18:00</string>
    <string name="hour18">18:00-19:00</string>
    <string name="hour19">19:00-20:00</string>
    <string name="hour20">20:00-21:00</string>
    <string name="hour21">21:00-22:00</string>
    <string name="tour">Tour</string>
    <string name="time11">11:00</string>
    <string name="time12">12:00</string>
    <string name="time13">13:00</string>
    <string name="time14">14:00</string>
    <string name="time15">15:00</string>
    <string name="time16">16:00</string>
    <string name="time17">17:00</string>
</resources>